--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -1,6 +1,7 @@
 ext.versions = [
     minSdk               : 21,
     compileSdk           : 31,
+    targetSdk           : 30,
     versionCode          : 1,
     versionName          : '1.0.0',
 
