--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,7 +28,8 @@ android {
   defaultConfig {
     applicationId "com.colorsnative.moviecompose"
     minSdkVersion versions.minSdk
-    targetSdkVersion versions.compileSdk
+    compileSdk versions.compileSdk
+    targetSdkVersion versions.targetSdk
     versionCode versions.versionCode
     versionName versions.versionName
     buildConfigField "String", "TMDB_API_KEY", "\"${getProperty("local.properties", "tmdb_api_key")}\""
@@ -42,6 +43,8 @@ android {
         arguments["dagger.hilt.disableModulesHaveInstallInCheck"] = "true"
       }
     }
+
+    testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
   }
 
   lintOptions {
@@ -75,6 +78,10 @@ android {
       includeAndroidResources = true
       returnDefaultValues = true
     }
+  }
+
+  packagingOptions {
+    resources.excludes.add("META-INF/*")
   }
 
   tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
